--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Information Technology</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="../images/logo.png">
+  <link rel="icon" href="images/logo.png">
 </head>
 <body>
   <!-- Navbar -->
