--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Dropdown menu -->
   <ul class="logo-dropdown">
     <li><a href="#home">Home</a></li>
-    <li><a href="../../courses/courses.html">Courses</a></li>
+    <li><a href="../courses/courses.html">Courses</a></li>
     <li><a href="#about">About</a></li>
     <li><a href="#contact">Contact</a></li>
     <li><a href="#achievements">Achievements</a></li>
@@ -32,7 +32,7 @@
   </ul>
     <ul class="nav-links">
       <li><a href="#home">Home</a></li>
-      <li><a href="#courses">Courses</a></li>
+      <li><a href="../courses/courses.html">Courses</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
