--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <ul class="nav-links">
       <li><a href="#home">Home</a></li>
       <li><a href="../courses/courses.html">Courses</a></li>
-      <li><a href="#about">About</a></li>
+      <li><a href="../AboutUs/index.html">About</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
     <div class="hamburger">&#9776;</div>
