--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <ul class="logo-dropdown">
     <li><a href="#home">Home</a></li>
     <li><a href="../courses/courses.html">Courses</a></li>
-    <li><a href="#about">About</a></li>
+    <li><a href="../AboutUs/index.html">About</a></li>
     <li><a href="#contact">Contact</a></li>
     <li><a href="#achievements">Achievements</a></li>
     <li><a href="#gallery">Gallery</a></li>
