--- a/AboutUs/index.html
+++ b/AboutUs/index.html
@@ -19,7 +19,8 @@
   <div id="scale-wrapper">
     <!-- head -->
     <div class="head">
-      <img src="Image/Back.png" alt="backtomenu">
+      <a href="../homepage main/index.html">
+      <img src="Image/Back.png" alt="backtomenu"></a>
       <h1>About Us</h1>
     </div>
     <!-- <button id="mode-toggle">🌙</button> -->
@@ -207,5 +208,6 @@ toggleBtn.addEventListener("click", () => {
 
 
 </body>
+
 
 </html>
