--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <li><a href="#home">Home</a></li>
     <li><a href="../courses/courses.html">Courses</a></li>
     <li><a href="../AboutUs/index.html">About</a></li>
-    <li><a href="#contact">Contact</a></li>
+    <li><a href="../contactus/index.html">Contact</a></li>
     <li><a href="#achievements">Achievements</a></li>
     <li><a href="#gallery">Gallery</a></li>
     <li><a href="#faculty">Faculty</a></li>
