--- a/AboutUs/index.html
+++ b/AboutUs/index.html
@@ -19,7 +19,7 @@
   <div id="scale-wrapper">
     <!-- head -->
     <div class="head">
-      <a href="../homepage main/index.html">
+      <a href="../index.html">
       <img src="Image/Back.png" alt="backtomenu"></a>
       <h1>About Us</h1>
     </div>
