--- a/contactus/index.html
+++ b/contactus/index.html
@@ -76,7 +76,7 @@
               alt="Rectangle328340"
               class="contactus-rectangle32"
             />
-            <a href="../homepage main/index.html">
+            <a href="../index.html">
             <img
               src="public/ellipse68341-lfro-200h.png"
               alt="Ellipse68341"
