--- a/courses/courses.html
+++ b/courses/courses.html
@@ -9,7 +9,7 @@
 <body>
   <main class="courses-page">
      <div class="head">
-      <a href="../homepage main/index.html">
+      <a href="../index.html">
       <img src="public/backarrow.png" alt="backtomenu"></a>
       <h1>Courses</h1>
     </div>
