--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="section-content">
         <h2>Resources</h2>
         <p>
-          Our departmeent combines technology and learning with high-speed internet, smart classrooms, and advanced labs equipped with world-class software tools. Regular training ensures staff and students stay ahead in the IT world.
+          Our department combines technology and learning with high-speed internet, smart classrooms, and advanced labs equipped with world-class software tools. Regular training ensures staff and students stay ahead in the IT world.
         </p>
       </div>
     </a>
