--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <li><a href="#home">Home</a></li>
       <li><a href="../courses/courses.html">Courses</a></li>
       <li><a href="../AboutUs/index.html">About</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="../contactus/index.html">Contact</a></li>
     </ul>
     <div class="hamburger">&#9776;</div>
   </nav>
