--- a/contactus/index.html
+++ b/contactus/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 <header class="header">
+  <a href="../index.html">
     <img src="public/back.png" alt="Logo">
+    </a>
     <h1>Contact Us</h1>
   </header>
   <section class="contact-wrapper">
