--- a/contactus/index.html
+++ b/contactus/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 <header class="header">
-    <img src="public/back.png" alt="Logo">
+  <a href="../index.html">
+    <img src="public/back.png" alt="Logo"></a>
     <h1>Contact Us</h1>
   </header>
   <section class="contact-wrapper">
@@ -17,9 +18,10 @@
 
       <!-- Left Column -->
       <div class="contact-info">
+         <a href="../index.html">
         <h2>Contact Us</h2>
         <p class="subtitle">Department of Information Technology<br>GEC Idukki</p>
-
+  
         <ul>
           <li><strong>📍 Address:</strong><br>
               Government Engineering College, Idukki, Kerala, India</li>
