--- a/facluty/index.html
+++ b/facluty/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
    <div class="head">
-      <img src="public/back.png" alt="backtomenu">
+     <a href="../index.html">
+      <img src="public/back.png" alt="backtomenu"></a>
       <h1>Faculty</h1>
     </div>
   <header class="site-header">
