--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <li><a href="../contactus/index.html">Contact</a></li>
     <li><a href="#achievements">Achievements</a></li>
     <li><a href="#gallery">Gallery</a></li>
-    <li><a href="#faculty">Faculty</a></li>
+    <li><a href="../facluty/index.html">Faculty</a></li>
   </ul>
     <ul class="nav-links">
       <li><a href="#home">Home</a></li>
@@ -108,7 +108,7 @@
   <section class="info-sections">
 
   <!-- Faculty -->
-  <a href="faculty.html" class="info-card">
+  <a href="../facluty/index.html" class="info-card">
     <img src="images/faculty.png" alt="Faculty members in academic setting">
     <div class="info-content">
       <h2>Faculty</h2>
