--- a/gallery/index.html
+++ b/gallery/index.html
@@ -16,7 +16,8 @@
 
 <body>
     <div class="head">
-        <img src="Image/Back.png" alt="backtomenu">
+        <a href="../index.html">
+        <img src="Image/Back.png" alt="backtomenu"></a>
         <h1>Gallery</h1>
     </div>
     <!-- <button id="mode-toggle"></button> -->
@@ -216,5 +217,6 @@ toggleBtn.addEventListener("click", () => {
 
     </script>
 </body>
+
 
 </html>
