--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <li><a href="../AboutUs/index.html">About</a></li>
     <li><a href="../contactus/index.html">Contact</a></li>
     <li><a href="#achievements">Achievements</a></li>
-    <li><a href="#gallery">Gallery</a></li>
+    <li><a href="../gallery/index.html">Gallery</a></li>
     <li><a href="../facluty/index.html">Faculty</a></li>
   </ul>
     <ul class="nav-links">
@@ -95,7 +95,7 @@
 
   <!-- Gallery -->
   <section class="full-section">
-    <a href="gallery.html">
+    <a href="../gallery/index.html">
       <img src="images/gallery.png" alt="Campus gallery showcasing student activities and events">
       <div class="section-content">
         <h2>Gallery</h2>
