--- a/placement/index.html
+++ b/placement/index.html
@@ -11,7 +11,8 @@
 
   <!-- Header -->
   <header class="header">
-    <img src="public/ellipse61603-0sb-200h.png" alt="Logo">
+    <a href="../index.html">
+    <img src="public/ellipse61603-0sb-200h.png" alt="Logo"></a>
     <h1>Placements</h1>
   </header>
 
