--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
   </a>
 
   <!-- Placement -->
-  <a href="placement.html" class="info-card">
-    <img src="images/placement.png" alt="Students in placement activities and interviews">
+  <a href="../placement/index.html" class="info-card">
+    <img src="images/placement.png" alt="Students in placement activities and interviews"></a>
     <div class="info-content">
       <h2>Placement</h2>
       <p>Our placement cell connects students with top companies like Infosys, TCS, HCL, and Tata Elxsi, ensuring career success.</p>
