--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
   <!-- Projects -->
   <a href="projects.html" class="info-card">
-    <img src="../placement/index.html" alt="Student projects and technical demonstrations">
+    <img src="images/projects.png" alt="Student projects and technical demonstrations">
     <div class="info-content">
       <h2>Projects</h2>
       <p>Explore innovative student projects, research activities, and technical demonstrations showcasing creativity and skills.</p>
