--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
   <!-- Placement -->
   <a href="../placement/index.html" class="info-card">
-    <img src="images/placement.png" alt="Students in placement activities and interviews"></a>
+    <img src="images/placement.png" alt="Students in placement activities and interviews">
     <div class="info-content">
       <h2>Placement</h2>
       <p>Our placement cell connects students with top companies like Infosys, TCS, HCL, and Tata Elxsi, ensuring career success.</p>
