--- a/wad team4/res.html
+++ b/wad team4/res.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="head">
-      <img src="back.png" alt="backtomenu">
+         <a href="../index.html">
+      <img src="back.png" alt="backtomenu"></a>
       <h1>Resources</h1>
     </div>
     <!-- <div class="container">
@@ -96,3 +97,4 @@
 
 </body>
 </html>
+
