--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </div>
  <!-- Resources -->
   <section class="full-section">
-    <a href="resources.html">
+    <a href="../wad team4/res.html">
       <img src="images/computer-lab.png" alt="Modern computer lab with advanced equipment">
       <div class="section-content">
         <h2>Resources</h2>
