--- a/wad team4/res.html
+++ b/wad team4/res.html
@@ -9,7 +9,7 @@
 <body>
     <div class="head">
          <a href="../index.html">
-      <img src="back.png" alt="backtomenu"></a>
+      <img src="Back.png" alt="backtomenu"></a>
       <h1>Resources</h1>
     </div>
     <!-- <div class="container">
@@ -97,4 +97,5 @@
 
 </body>
 </html>
+
 
