--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   <!-- Events -->
   <section class="full-section">
-    <a href="events.html">
+    <a href="../wad team4/event.html">
       <img src="images/events.png" alt="Students participating in cultural and technical events">
       <div class="section-content">
         <h2>Events</h2>
