--- a/wad team4/event.html
+++ b/wad team4/event.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div class="head">
-      <img src="back.png" alt="backtomenu">
+    <a href="../index.html">
+      <img src="back.png" alt="backtomenu"></a>
       <h1>Top Events</h1>
     </div>
   <div class="container">
@@ -114,3 +115,4 @@
   </script>
 </body>
 </html>
+
