--- a/wad team4/event.html
+++ b/wad team4/event.html
@@ -9,7 +9,7 @@
 <body>
   <div class="head">
     <a href="../index.html">
-      <img src="back.png" alt="backtomenu"></a>
+      <img src="Back.png" alt="backtomenu"></a>
       <h1>Top Events</h1>
     </div>
   <div class="container">
@@ -115,4 +115,5 @@
   </script>
 </body>
 </html>
+
 
