--- a/IT-Department-master/project.html
+++ b/IT-Department-master/project.html
@@ -11,7 +11,8 @@
 
 <body>
      <header class="header">
-    <img src="images/backward-icon.png" alt="Logo">
+          <a href="../index.html">
+    <img src="images/backward-icon.png" alt="Logo"></a>
     <h1>Project</h1>
     </header>
     <!-- header -->
