--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   </a>
 
   <!-- Projects -->
-  <a href="projects.html" class="info-card">
+  <a href="../IT-Department-master/project.html" class="info-card">
     <img src="images/projects.png" alt="Student projects and technical demonstrations">
     <div class="info-content">
       <h2>Projects</h2>
