--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <!-- Achievements -->
   <section class="full-section">
-    <a href="achievements.html">
+    <a href="../IT-Department-master/achievements.html">
       <img src="images/achievements.png" alt="Students celebrating achievements and awards">
       <div class="section-content">
         <h2>Achievements</h2>
