--- a/IT-Department-master/achievements.html
+++ b/IT-Department-master/achievements.html
@@ -11,7 +11,8 @@
 <body>
     <!-- header -->
      <header class="header">
-    <img src="images/backward-icon.png" alt="Logo">
+          <a href="../index.html">
+    <img src="images/backward-icon.png" alt="Logo"></a>
     <h1>Achievements</h1>
   </header>
     <header>
